@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-05-06 15:54:33 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-29
+
+    Summary:
+      catalog, index common words and one letter words too
+    Revision:
+      itools--main--0.9--patch-29
+
+
+    modified files:
+     Changelog catalog/Analysers.py catalog/Catalog.py
+
+
 2005-05-06 15:37:29 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-28
 
     Summary:
